--- a/index.html
+++ b/index.html
@@ -1,57 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Free Website</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Etsy-Style Shop</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="container">
-    <nav class="nav">
-      <a class="brand" href="/">MySite</a>
-      <a href="#about">About</a>
-      <a href="#features">Features</a>
-      <a href="#contact">Contact</a>
-    </nav>
-    <section class="hero">
-      <h1>Kyles ugly 🎉</h1>
-      <p>This is a completely free, hosted website.</p>
-      <a class="btn" href="#features">See what’s inside</a>
-    </section>
+
+  <!-- 🌐 Header -->
+  <header class="header">
+    <div class="container">
+      <a href="#" class="logo">MyShop</a>
+      <nav class="nav">
+        <a href="#">Home</a>
+        <a href="#">Shop</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+      <input type="text" placeholder="Search for products..." class="search-bar">
+    </div>
   </header>
 
-  <main class="container">
-    <section id="about">
-      <h2>About</h2>
-      <p>I built this with plain HTML, CSS, and JavaScript.</p>
-    </section>
+  <!-- 🏷 Featured Products Section -->
+  <section class="featured">
+    <div class="container">
+      <h2>Featured Products</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="https://via.placeholder.com/300x200" alt="Product 1">
+          <h3>Handmade Necklace</h3>
+          <p>$25.00</p>
+        </div>
+        <div class="card">
+          <img src="https://via.placeholder.com/300x200" alt="Product 2">
+          <h3>Wooden Bowl</h3>
+          <p>$40.00</p>
+        </div>
+        <div class="card">
+          <img src="https://via.placeholder.com/300x200" alt="Product 3">
+          <h3>Ceramic Mug</h3>
+          <p>$18.00</p>
+        </div>
+        <div class="card">
+          <img src="https://via.placeholder.com/300x200" alt="Product 4">
+          <h3>Custom Print</h3>
+          <p>$30.00</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <section id="features" class="cards">
-      <article class="card">
-        <h3>Fast</h3>
-        <p>Static site = super quick to load.</p>
-      </article>
-      <article class="card">
-        <h3>Free</h3>
-        <p>Hosted on a free platform with HTTPS.</p>
-      </article>
-      <article class="card">
-        <h3>Simple</h3>
-        <p>No backend or database required.</p>
-      </article>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p><a class="btn" href="mailto:you@example.com">Email Me</a></p>
-    </section>
-  </main>
-
-  <footer class="container footer">
-    <small>© <span id="year"></span> MySite</small>
+  <!-- 🦶 Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2025 MyShop. All rights reserved.</p>
+    </div>
   </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
