--- a/index.html
+++ b/index.html
@@ -12,40 +12,55 @@
   <header class="header">
     <div class="container">
       <a href="#" class="logo">MyShop</a>
-      <nav class="nav">
-        <a href="#">Home</a>
-        <a href="#">Shop</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-      </nav>
-      <input type="text" placeholder="Search for products..." class="search-bar">
+      <input type="text" class="search-bar" placeholder="Search for products...">
     </div>
+
+    <!-- 🏷 Categories -->
+    <nav class="categories">
+      <div class="container">
+        <a href="#">Jewelry</a>
+        <a href="#">Home</a>
+        <a href="#">Clothing</a>
+        <a href="#">Art</a>
+        <a href="#">Toys</a>
+        <a href="#">More</a>
+      </div>
+    </nav>
   </header>
 
-  <!-- 🏷 Featured Products Section -->
-  <section class="featured">
+  <!-- 🛍 Product Grid -->
+  <section class="products">
     <div class="container">
-      <h2>Featured Products</h2>
       <div class="cards">
         <div class="card">
-          <img src="https://via.placeholder.com/300x200" alt="Product 1">
+          <img src="https://via.placeholder.com/300x300" alt="Product 1">
           <h3>Handmade Necklace</h3>
           <p>$25.00</p>
+          <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="https://via.placeholder.com/300x200" alt="Product 2">
+          <img src="https://via.placeholder.com/300x300" alt="Product 2">
           <h3>Wooden Bowl</h3>
           <p>$40.00</p>
+          <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="https://via.placeholder.com/300x200" alt="Product 3">
+          <img src="https://via.placeholder.com/300x300" alt="Product 3">
           <h3>Ceramic Mug</h3>
           <p>$18.00</p>
+          <button class="btn">Add to Cart</button>
         </div>
         <div class="card">
-          <img src="https://via.placeholder.com/300x200" alt="Product 4">
+          <img src="https://via.placeholder.com/300x300" alt="Product 4">
           <h3>Custom Print</h3>
           <p>$30.00</p>
+          <button class="btn">Add to Cart</button>
+        </div>
+        <div class="card">
+          <img src="https://via.placeholder.com/300x300" alt="Product 5">
+          <h3>Leather Wallet</h3>
+          <p>$50.00</p>
+          <button class="btn">Add to Cart</button>
         </div>
       </div>
     </div>
