Use web URLs for product images

--- a/index.html
+++ b/index.html
@@ -33,35 +33,40 @@
     <div class="container">
       <div class="cards">
         <div class="card">
-          <img src="https://via.placeholder.com/300x300" alt="Product 1">
-          <h3>Handmade Necklace</h3>
-          <p>$25.00</p>
-          <button class="btn">Add to Cart</button>
-        </div>
-        <div class="card">
-          <img src="https://via.placeholder.com/300x300" alt="Product 2">
-          <h3>Wooden Bowl</h3>
-          <p>$40.00</p>
-          <button class="btn">Add to Cart</button>
-        </div>
-        <div class="card">
-          <img src="https://via.placeholder.com/300x300" alt="Product 3">
-          <h3>Ceramic Mug</h3>
-          <p>$18.00</p>
-          <button class="btn">Add to Cart</button>
-        </div>
-        <div class="card">
-          <img src="https://via.placeholder.com/300x300" alt="Product 4">
-          <h3>Custom Print</h3>
-          <p>$30.00</p>
-          <button class="btn">Add to Cart</button>
-        </div>
-        <div class="card">
-          <img src="https://via.placeholder.com/300x300" alt="Product 5">
-          <h3>Leather Wallet</h3>
-          <p>$50.00</p>
-          <button class="btn">Add to Cart</button>
-        </div>
+  <img src="https://images.unsplash.com/photo-1581291519195-ef11498d1cf5?auto=format&fit=crop&w=300&q=80" alt="Handmade Necklace">
+  <h3>Handmade Necklace</h3>
+  <p>$25.00</p>
+  <button class="btn">Add to Cart</button>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1589923188900-3e6a1b0c1d02?auto=format&fit=crop&w=300&q=80" alt="Wooden Bowl">
+  <h3>Wooden Bowl</h3>
+  <p>$40.00</p>
+  <button class="btn">Add to Cart</button>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1582719478184-8a7f5db5f6c0?auto=format&fit=crop&w=300&q=80" alt="Ceramic Mug">
+  <h3>Ceramic Mug</h3>
+  <p>$18.00</p>
+  <button class="btn">Add to Cart</button>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1588196749597-9ff075ee6b5b?auto=format&fit=crop&w=300&q=80" alt="Custom Print">
+  <h3>Custom Print</h3>
+  <p>$30.00</p>
+  <button class="btn">Add to Cart</button>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1611078481354-2a3e179ddc4e?auto=format&fit=crop&w=300&q=80" alt="Leather Wallet">
+  <h3>Leather Wallet</h3>
+  <p>$50.00</p>
+  <button class="btn">Add to Cart</button>
+</div>
+
       </div>
     </div>
   </section>
