Fix mobile grid centering and remove extra nested div

--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
   <!-- 🛍 Product Grid -->
   <section class="products">
     <div class="container">
-      <div class="cards">
-        <div class="cards" id="product-grid">
-  <!-- JS will populate products here -->
-</div>
-
-      </div>
+      <<section class="products">
+  <div class="container">
+    <div class="cards" id="product-grid">
+      <!-- JS will populate products here -->
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- 🦶 Footer -->
   <footer class="footer">
