Update header logo text to DjsDopeDesigns

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- 🌐 Header -->
   <header class="header">
     <div class="container">
-      <a href="#" class="logo">MyShop</a>
+      <a href="#" class="logo">DjsDopeDesigns</a>
       <input type="text" class="search-bar" placeholder="Search for products...">
     </div>
 
