Center logo and fix search bar layout

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
   <!-- 🌐 Header -->
   <header class="header">
-    <div class="container">
-      <a href="#" class="logo">DjsDopeDesigns</a>
-      <input type="text" class="search-bar" placeholder="Search for products...">
-    </div>
+  <div class="container header-container">
+    <a href="#" class="logo">DjsDopeDesigns</a>
+    <input type="text" class="search-bar" placeholder="Search for products...">
+  </div>
 
     <!-- 🏷 Categories -->
     <nav class="categories">
