Added liked and cart pages, updated product page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   <div class="container header-container">
     <a href="#" class="logo">DjsDopeDesigns</a>
     <input type="text" class="search-bar" placeholder="Search for products...">
+
+<!-- ❤️ Liked Items Link -->
+    <a href="liked.html" style="color: #f1641e; font-weight: bold; margin-top: 8px; display: inline-block;">
+      ♥ Liked Items
+    </a>
   </div>
 
     <!-- 🏷 Categories -->
@@ -31,7 +36,7 @@
   <!-- 🛍 Product Grid -->
   <section class="products">
     <div class="container">
-      <<section class="products">
+      <section class="products">
   <div class="container">
     <div class="cards" id="product-grid">
       <!-- JS will populate products here -->
@@ -56,15 +61,68 @@
         const card = document.createElement('div');
         card.className = 'card';
         card.innerHTML = `
-          <img src="${product.image}" alt="${product.name}">
-          <h3>${product.name}</h3>
-          <p>${product.price}</p>
-          <button class="btn">Add to Cart</button>
+          <div class="heart" onclick="toggleLike(${product.id}, this)">♡</div>
+          <a href="product.html?id=${product.id}">
+            <img src="${product.image}" alt="${product.name}">
+            <h3>${product.name}</h3>
+          </a>
+          <p>$${(product.price / 100).toFixed(2)}</p>
+          <button class="btn" onclick="addToCart(${product.id})">Add to Cart</button>
         `;
         grid.appendChild(card);
       });
+
+      // Restore liked hearts
+      restoreLikedHearts();
     })
     .catch(err => console.error("Failed to load products:", err));
+
+  // Add to Cart
+  function addToCart(productId) {
+    fetch('products.json')
+      .then(res => res.json())
+      .then(products => {
+        const product = products.find(p => p.id === productId);
+        if (!product) return;
+        let cart = JSON.parse(localStorage.getItem("cart")) || [];
+        const existing = cart.find(item => item.id === productId);
+        if (existing) {
+          existing.quantity++;
+        } else {
+          cart.push({ id: product.id, name: product.name, price: product.price, quantity: 1 });
+        }
+        localStorage.setItem("cart", JSON.stringify(cart));
+        alert(`${product.name} added to cart!`);
+      });
+  }
+
+  // Heart toggle
+  function toggleLike(productId, el) {
+    let liked = JSON.parse(localStorage.getItem("likedItems")) || [];
+    if (liked.includes(productId)) {
+      liked = liked.filter(id => id !== productId);
+      el.textContent = "♡";
+    } else {
+      liked.push(productId);
+      el.textContent = "♥";
+    }
+    localStorage.setItem("likedItems", JSON.stringify(liked));
+  }
+
+  // Restore liked hearts
+  function restoreLikedHearts() {
+    let liked = JSON.parse(localStorage.getItem("likedItems")) || [];
+    document.querySelectorAll(".card").forEach(card => {
+      const heart = card.querySelector(".heart");
+      const productLink = card.querySelector("a");
+      if (!productLink || !heart) return;
+      const url = new URL(productLink.href, window.location.href);
+      const id = parseInt(url.searchParams.get("id"));
+      if (liked.includes(id)) {
+        heart.textContent = "♥";
+      }
+    });
+  }
 </script>
 
 
