Update CSS and header layout

--- a/cart.html
+++ b/cart.html
@@ -27,9 +27,27 @@
 
 <!-- Header -->
 <header class="header">
-  <div class="header-container">
+  <div class="container header-container">
+    <!-- Hamburger Icon -->
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <!-- Logo -->
     <a href="index.html" class="logo">DjsDopeDesigns</a>
-    <a href="liked.html" style="color:#f1641e; font-weight:bold;">♥ Liked Items</a>
+
+    <!-- Search Bar -->
+    <input type="text" class="search-bar" placeholder="Search products...">
+
+    <!-- Heart / Liked Items -->
+    <a href="liked.html" class="liked-items">♥</a>
+
+    <!-- Shopping Cart Icon -->
+    <a href="cart.html" class="cart">
+      <img src="images/cart-icon.png" alt="Cart">
+    </a>
   </div>
 </header>
 
