--- a/index.html
+++ b/index.html
@@ -10,37 +10,29 @@
 
   <!-- 🌐 Header -->
   <header class="header">
-    <div class="container header-container">
-      <a href="index.html" class="logo">DjsDopeDesigns</a>
-      <input type="text" class="search-bar" placeholder="Search for products...">
-
-      <!-- ❤️ Liked Items Link -->
-      <a href="liked.html" style="color: #f1641e; font-weight: bold; margin-left: 20px;">
-        ♥ Liked Items
-      </a>
-
-      <!-- 🛒 Cart Icon / Counter -->
-      <a href="cart.html" style="margin-left: 20px; font-weight: bold; position: relative;">
-        🛒 Cart
-        <span id="cart-count" 
-              style="background:#f1641e; color:#fff; font-size:12px; padding:2px 6px; border-radius:50%; position:absolute; top:-8px; right:-12px;">
-          0
-        </span>
-      </a>
+  <div class="container header-container">
+    <!-- Hamburger Icon -->
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
 
-    <!-- 🏷 Categories -->
-    <nav class="categories">
-      <div class="container">
-        <a href="#">Jewelry</a>
-        <a href="#">Home</a>
-        <a href="#">Clothing</a>
-        <a href="#">Art</a>
-        <a href="#">Toys</a>
-        <a href="#">More</a>
-      </div>
-    </nav>
-  </header>
+    <!-- Logo -->
+    <a href="index.html" class="logo">DjsDopeDesigns</a>
+
+    <!-- Search Bar -->
+    <input type="text" class="search-bar" placeholder="Search products...">
+
+    <!-- Heart / Liked Items -->
+    <a href="liked.html" class="liked-items">♥</a>
+
+    <!-- Shopping Cart Icon -->
+    <a href="cart.html" class="cart">
+      <img src="images/cart-icon.png" alt="Cart">
+    </a>
+  </div>
+</header>
 
   <!-- 🛍 Product Grid -->
   <section class="products">
