--- a/product.html
+++ b/product.html
@@ -198,13 +198,29 @@
 
   <!-- Header Navigation -->
   <header class="header">
-    <div class="container header-container">
-      <a href="index.html" class="logo">DjsDopeDesigns</a>
-      <a href="liked.html" style="color: #f1641e; font-weight: bold; margin-left: 20px;">
-        ♥ Liked Items
-      </a>
+  <div class="container header-container">
+    <!-- Hamburger Icon -->
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-  </header>
+
+    <!-- Logo -->
+    <a href="index.html" class="logo">DjsDopeDesigns</a>
+
+    <!-- Search Bar -->
+    <input type="text" class="search-bar" placeholder="Search products...">
+
+    <!-- Heart / Liked Items -->
+    <a href="liked.html" class="liked-items">♥</a>
+
+    <!-- Shopping Cart Icon -->
+    <a href="cart.html" class="cart">
+      <img src="images/cart-icon.png" alt="Cart">
+    </a>
+  </div>
+</header>
 
   <!-- Product Content -->
   <div class="container">
