heart added image

--- a/liked.html
+++ b/liked.html
@@ -28,7 +28,7 @@
 
     <!-- Shopping Cart Icon -->
     <a href="cart.html" class="cart">
-      <img src="images/cart-icon.png" alt="Cart">
+      <img src="https://www.svgrepo.com/show/507858/shopping-cart.svg" alt="Cart">
     </a>
   </div>
 </header>
