--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <input type="text" class="search-bar" placeholder="Search products...">
 
     <!-- Heart / Liked Items -->
-    <a href="liked.html" class="liked-items">♥</a>
+    <a href="liked.html" class="liked-items">
+<img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items">
 
     <!-- Shopping Cart Icon -->
     <a href="cart.html" class="cart">
