heart added imagee

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <input type="text" class="search-bar" placeholder="Search products...">
 
     <!-- Heart / Liked Items -->
-    <a href="liked.html" class="liked-items">
-<img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items">
+  <a href="liked.html" class="liked-icon">
+    <img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items">
+  </a>
 
     <!-- Shopping Cart Icon -->
     <a href="cart.html" class="cart">
