--- a/product.html
+++ b/product.html
@@ -213,7 +213,9 @@
     <input type="text" class="search-bar" placeholder="Search products...">
 
     <!-- Heart / Liked Items -->
-    <a href="liked.html" class="liked-items">♥</a>
+  <a href="liked.html" class="liked-icon">
+    <img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items">
+  </a>
 
     <!-- Shopping Cart Icon -->
     <a href="cart.html" class="cart">
