heart added imageeee

--- a/index.html
+++ b/index.html
@@ -11,28 +11,36 @@
   <!-- 🌐 Header -->
   <header class="header">
   <div class="container header-container">
-    <!-- Hamburger Icon -->
-    <div class="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
+
+    <!-- Left Section: Hamburger, Logo, Search -->
+    <div class="header-left">
+      <!-- Hamburger Icon -->
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
+      <!-- Logo -->
+      <a href="index.html" class="logo">DjsDopeDesigns</a>
+
+      <!-- Search Bar -->
+      <input type="text" class="search-bar" placeholder="Search products...">
     </div>
 
-    <!-- Logo -->
-    <a href="index.html" class="logo">DjsDopeDesigns</a>
+    <!-- Right Section: Liked + Cart -->
+    <div class="header-right">
+      <!-- Heart / Liked Items -->
+      <a href="liked.html" class="liked-icon">
+        <img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items">
+      </a>
 
-    <!-- Search Bar -->
-    <input type="text" class="search-bar" placeholder="Search products...">
+      <!-- Shopping Cart Icon -->
+      <a href="cart.html" class="cart">
+        <img src="https://www.svgrepo.com/show/507858/shopping-cart.svg" alt="Cart">
+      </a>
+    </div>
 
-    <!-- Heart / Liked Items -->
-  <a href="liked.html" class="liked-icon">
-    <img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items">
-  </a>
-
-    <!-- Shopping Cart Icon -->
-    <a href="cart.html" class="cart">
-      <img src="https://www.svgrepo.com/show/507858/shopping-cart.svg" alt="Cart">
-    </a>
   </div>
 </header>
 
